# discord-ipc

./: Cargo.toml  README.md
examples/: example.rs
src/: activity.rs  discord_ipc.rs  ipc_unix.rs  ipc_windows.rs  lib.rs  pack_unpack.rs
tests/: models_test.rs  reconnect_test.rs  update_test.rs
