[package]
name = "discord-ipc-rp"
version = "0.1.1"
authors = ["sardonicism-04 <110789901+sardonicism-04@users.noreply.github.com>", "Stefanuk12"]
edition = "2021"
description = "A simple, cross-platform crate for interfacing with Discord's IPC"
readme = "README.md"
repository = "https://github.com/Stefanuk12/discord-ipc"
license = "MIT"
keywords = ["discord", "rich-presence", "ipc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.6", features = ["v4"] }
thiserror = "1.0"
strum = { version = "0.25", features = ["derive"] }
log = "0.4"

[dev-dependencies]
env_logger = "0.10.1"
